# talent-plan

courses/rust/projects/exercise1/: Cargo.toml  README.md
courses/rust/projects/exercise1/src/: data.rs  main.rs
courses/rust/projects/exercise2/: Cargo.toml  README.md  out.json
courses/rust/projects/exercise2/src/: data.rs  main.rs
courses/rust/projects/exercise3/: Cargo.toml  README.md  out.bson
courses/rust/projects/exercise3/src/: data.rs  main.rs
courses/rust/projects/exercise4/: README.md  docker-compose.yml
courses/rust/projects/exercise4/redis/: Cargo.toml
courses/rust/projects/exercise4/redis-client/: Cargo.toml
courses/rust/projects/exercise4/redis-client/src/: domain.rs  lib.rs  protocol.rs
courses/rust/projects/exercise4/redis/src/: domain.rs  lib.rs  util.rs
courses/rust/projects/exercise5/redis/: Cargo.toml
courses/rust/projects/exercise5/redis/redis/: Cargo.toml
courses/rust/projects/exercise5/redis/redis/src/: lib.rs  util.rs
courses/rust/projects/exercise5/redis/redis_protocol/: Cargo.toml
courses/rust/projects/exercise5/redis/redis_protocol/src/: types.rs
courses/rust/projects/exercise5/redis/serde_redis/: Cargo.toml
courses/rust/projects/exercise5/redis/serde_redis/src/: error.rs  (+1 more)
courses/rust/projects/exercise6/thread_pool/src/: thread.rs
courses/rust/projects/solution-1/src/: kvs.rs  lib.rs
courses/rust/projects/solution-2/: Cargo.toml
courses/rust/projects/solution-2/src/: domain.rs  error.rs  kvs.rs  lib.rs  ser.rs
courses/rust/projects/solution-3/: Cargo.toml
courses/rust/projects/solution-3/src/: kvs.rs
