[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["l-const"]
description = "A key-value store."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = "2.32"
failure = "0.1.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
tempfile = "3.4.0"
walkdir = "2.3.2"
