[package]
name = "redis-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
bytes-utils = "0.1.3"
log = "0.4.17"
log4rs = "1.2.0"


[lib]
name = "simple_redis"
path = "src/lib.rs"

[[bin]]
name = "redis-simple-client"
path = "src/bin/client.rs"

[[bin]]
name = "redis-simple-server"
path = "src/bin/server.rs"
